[project]
name = "langgraph-project"
version = "0.1.0"
description = ""
authors = [
    {name = "PERSONAAI_005\\ysh",email = "ysh@personaai.co.kr"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain>=1.2.6,<2.0.0",
    "langchain-openai>=1.1.7,<2.0.0",
    "langchain-tavily>=0.2.17,<0.3.0",
    "python-dotenv>=1.2.1,<2.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "langgraph_project", from = "src" }]